--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <!-- <link href="assets/css/main.css" rel="stylesheet"> -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- Custom CSS File -->
   <link href="assets/css/custom.css" rel="stylesheet">
