--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">
-              از غذای <span style="color: #FF5857;">سالم و خوشمزه</span> ترنگ‌پز<br>لذت ببرید
+              از غذای سالم و خوشمزه<span style="color: #FF5857;">ترنگ‌پز</span> <br>لذت ببرید
             </h1>
             <p data-aos="fade-up" data-aos-delay="100">
               ترنگ‌پز، راهکار هوشمند و حرفه‌ای برای تأمین غذای روزانه سازمان‌ها و شرکت‌هاست. با منوی متنوع، غذای سالم و تحویل دقیق، تجربه‌ای بی‌دردسر و خوش‌مزه را برای پرسنل شما فراهم می‌کنیم.
