--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>آدرس</h4>
-            <p>>خیابان مقدس اردبیلی، پالادیوم، واحد ۸۲۶ جنوبی</p>
+            <p>خیابان مقدس اردبیلی، پالادیوم، واحد ۸۲۶ جنوبی</p>
             <p>تهران</p>
             <p></p>
           </div>
