--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
       g.parentNode.insertBefore(e,g)
     }
   })(document,window.mixpanel||[]);
-  mixpanel.init("c0d560086092143a9891e2bbb9f45384");
+  mixpanel.init("c0d560086092143a9891e2bbb9f45384"); // 👈 اینجا توکن پروژه را بگذارید
 </script>
-
 
 </head>
 
