--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   <div class="container" data-aos="fade-up">
     <div class="section-title">
       <h2>شما اعتماد کردید</h2>
-      <p><spanا</span> <span class="description-title"></span></p>
+      <p><span></span> <span class="description-title"></span></p>
     </div>
 
     <div class="swiper brands-slider">
