--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
           <div>
             <h4>تماس با ما</h4>
             <p>
-              <strong>تلفن:</strong> <span> ۲۲۰۳۲۱۴۳</span><br>
+              <strong>تلفن:</strong> <span> 09912268106</span><br>
               <strong>ایمیل:</strong> <span>info@torangpaz.com</span><br>
             </p>
           </div>
@@ -634,7 +634,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>حق مالکیت فکری</span> <strong class="px-1 sitename">ترنگ‌‌پز</strong> <span>تمامی حقوق محفوظ است</span></p>
+      <p>© <span>حق مالکیت فکری و مالی برای</span> <strong class="px-1 sitename">ترنگ‌‌پز</strong> <span> محفوظ است</span></p>
       <div class="credits">
   
 
