--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             
             <div class="cta-buttons d-flex align-items-center gap-3 mt-4">
               <a href="#book-a-table" class="btn-get-started">ثبت درخواست</a>
-              <a href="#menu" class="btn-outline-secondary">مشاهده منو</a>
+              <a href="#http://torangpaz.com/" class="btn-outline-secondary">نرم‌افزار سفارش‌گیری</a>
             </div>
             
           </div>
