درست کردن استایل هدر دمو سکشن

--- a/index.html
+++ b/index.html
@@ -356,44 +356,45 @@
     </section><!-- /Testimonials Section -->
 
 
-    <!-- Demo Section -->
-    <section id="desktop-mockup" class="mockup-section section py-5">
-      <div class="container text-center">
+   <section id="desktop-mockup" class="mockup-section section py-5">
+  <div class="container">
 
-        <!-- Section Title -->
-        <div class="section-title mb-4" data-aos="fade-up">
-          <h2>نرم‌افزار سفارش‌گیری <span class="description-title">ترنگ‌پز</span></h2>
-          <p>تجربه‌ای نوین در <span class="description-title">مدیریت سفارش غذای سازمانی</span></p>
+    <!-- عنوان سکشن مطابق استاندارد پروژه -->
+    <div class="section-title text-center mb-5" data-aos="fade-up">
+      <h2>نرم‌افزار سفارش‌گیری <span class="description-title">ترنگ‌پز</span></h2>
+      <p>تجربه‌ای نوین در <span class="description-title">مدیریت سفارش غذای سازمانی</span></p>
+    </div>
+    
+    <!-- Swiper -->
+    <div class="swiper desktop-mockup-swiper mb-4" data-aos="zoom-in" data-aos-delay="100">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="assets/img/login.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۱">
         </div>
-
-        <!-- Swiper -->
-        <div class="swiper desktop-mockup-swiper mb-4" data-aos="zoom-in" data-aos-delay="100">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="assets/img/login.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۱">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/order.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۲">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/orderlist.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۳">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/profile.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۴">
-            </div>
-          </div>
-          <div class="swiper-pagination mt-3"></div>
+        <div class="swiper-slide">
+          <img src="assets/img/order.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۲">
         </div>
-
-        <!-- CTA Button -->
-        <a href="#contact" class="btn btn-outline-secondary mt-3 px-4 py-2 fw-bold shadow-sm">
-          درخواست مشاوره
-        </a>
-
+        <div class="swiper-slide">
+          <img src="assets/img/orderlist.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۳">
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/img/profile.png" class="img-fluid rounded shadow-sm" alt="موکاپ ۴">
+        </div>
       </div>
-    </section>
+      <div class="swiper-pagination mt-3"></div>
+    </div>
 
-    <!-- Demo Section -->
+    <!-- CTA Button -->
+    <div class="text-center">
+      <a href="#contact" class="btn btn-outline-secondary mt-3 px-4 py-2 fw-bold shadow-sm">
+        درخواست مشاوره
+      </a>
+    </div>
+
+  </div>
+</section>
+<!-- End of Demo Section -->
+
 
   <section id="features-mobile" class="features-section section light-background py-5">
   <div class="container" data-aos="fade-up">
